<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thank_you"
        android:textSize="30sp"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="@color/happyGreenColor"
        android:padding="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/the_app_is_still_under_production"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textAlignment="center"
        android:text="@string/feel_free_to_use_this_trial_app_as_much_as_you_want"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textAlignment="center"
        android:text="@string/a_lot_of_nifty_animations_and_features_are_added_to_keep_you_busy_for_a_few_minutes_good_luck"
        android:textSize="16sp"/>

    <android.support.design.button.MaterialButton
        android:id="@+id/exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/exit"/>

</LinearLayout>